fixed footer & remove anim on mobiles

--- a/css/main.css
+++ b/css/main.css
@@ -625,8 +625,8 @@ body {
 
 .navigation__burger {
   margin-left: 2rem;
-  width: 3rem;
-  height: 3rem;
+  width: 5rem;
+  height: 5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -667,7 +667,7 @@ body {
 .navigation__burger-span {
   display: block;
   height: 3px;
-  width: 3rem;
+  width: 5rem;
   background-color: var(--color-primary);
   position: relative;
   -webkit-transition: 0.4s all;
@@ -677,10 +677,10 @@ body {
 .navigation__burger-span:after {
   content: "";
   position: absolute;
-  top: 1rem;
+  top: 1.5rem;
   left: 0;
   height: 3px;
-  width: 3rem;
+  width: 5rem;
   background-color: var(--color-primary);
   -webkit-transition: 0.6s all;
   transition: 0.6s all;
@@ -689,10 +689,10 @@ body {
 .navigation__burger-span::before {
   content: "";
   position: absolute;
-  top: -1rem;
+  top: -1.5rem;
   left: 0;
   height: 3px;
-  width: 3rem;
+  width: 5rem;
   background-color: var(--color-primary);
   -webkit-transition: 0.6s all;
   transition: 0.6s all;
@@ -1637,9 +1637,19 @@ body {
   font-weight: 700;
 }
 
+@media only screen and (max-width: 415px) {
+  .footer__logo {
+    font-size: 2.5rem;
+    letter-spacing: 1px;
+  }
+  .footer__logo:after {
+    display: none;
+  }
+}
+
 .nav__burger {
   position: fixed;
-  width: 20rem;
+  width: 30rem;
   background-color: var(--color-primary);
   height: 100%;
   z-index: 10;
@@ -1651,13 +1661,13 @@ body {
 
 .nav__burger ul {
   list-style: none;
-  margin-top: 6rem;
+  margin-top: 10rem;
   width: 100%;
   text-align: center;
 }
 
 .nav__burger ul li {
-  width: 20rem;
+  width: 30rem;
 }
 
 .nav__burger ul li:not(:first-of-type) {
@@ -1666,7 +1676,7 @@ body {
 
 .nav__burger ul li a {
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 4rem;
   color: black;
 }
 
